--- a/portal-frontend/src/app/features/edit-submission/primary-contact/primary-contact.component.html
+++ b/portal-frontend/src/app/features/edit-submission/primary-contact/primary-contact.component.html
@@ -2,6 +2,12 @@
   <h2>Primary Contact</h2>
   <p>Select from the listed parcel owners or identify a third party agent</p>
   <p>*All fields are required unless stated optional.</p>
+  <div class="step-documents">
+    <h6>Documents needed for this step:</h6>
+    <ul>
+      <li>Authorization Letter (if applicable)</li>
+    </ul>
+  </div>
 </div>
 <section>
   <div class="contacts">
