--- a/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-details.component.html
+++ b/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-details.component.html
@@ -3,6 +3,13 @@
     <h3>Identify Parcels Under Application</h3>
     <p>Provide parcel identification and registered ownership information for each parcel under application.</p>
     <p>*All fields are required unless stated optional.</p>
+    <div class="step-documents">
+      <h6>Documents needed for this step:</h6>
+      <ul>
+        <li>Certificate of Title</li>
+        <li>Corporate Summary (if applicable)</li>
+      </ul>
+    </div>
   </div>
   <mat-expansion-panel
     *ngFor="let parcel of parcels; let parcelInd = index"
