--- a/portal-frontend/src/app/features/edit-submission/proposal/subd-proposal/subd-proposal.component.html
+++ b/portal-frontend/src/app/features/edit-submission/proposal/subd-proposal/subd-proposal.component.html
@@ -5,6 +5,13 @@
     <a> Section 6 of the ALC Act. </a>
   </p>
   <p>*All fields are required unless stated optional.</p>
+  <div class="step-documents">
+    <h6>Documents needed for this step:</h6>
+    <ul>
+      <li>Proposal Map / Site Plan</li>
+      <li>Proof of Homesite Severance Qualification</li>
+    </ul>
+  </div>
 </div>
 <app-warning-banner>
   In order to complete this step, please consult the following pages on the ALC website:
