--- a/portal-frontend/src/app/features/application-details/application-details.component.html
+++ b/portal-frontend/src/app/features/application-details/application-details.component.html
@@ -4,7 +4,7 @@
     [$applicationSubmission]="$application"
     [showErrors]="showErrors"
     [showEdit]="showEdit"
-    [originalSubmissionUuid]='originalSubmissionUuid'
+    [originalSubmissionUuid]="originalSubmissionUuid"
   ></app-parcel>
 </section>
 <section>
@@ -14,7 +14,7 @@
     [showEdit]="showEdit"
     [parcelType]="parcelType.OTHER"
     [draftMode]="draftMode"
-    [originalSubmissionUuid]='originalSubmissionUuid'
+    [originalSubmissionUuid]="originalSubmissionUuid"
   ></app-parcel>
 </section>
 <section>
@@ -147,7 +147,18 @@
     <div class="full-width">
       <h4>
         Land Use of Adjacent Parcels
-        <app-updated-banner *ngIf="updatedFields.includes('northLandUseType')"></app-updated-banner>
+        <app-updated-banner
+          *ngIf="
+            updatedFields.includes('northLandUseType') ||
+            updatedFields.includes('northLandUseTypeDescription') ||
+            updatedFields.includes('eastLandUseType') ||
+            updatedFields.includes('eastLandUseTypeDescription') ||
+            updatedFields.includes('southLandUseType') ||
+            updatedFields.includes('southLandUseTypeDescription') ||
+            updatedFields.includes('westLandUseType') ||
+            updatedFields.includes('westLandUseTypeDescription')
+          "
+        ></app-updated-banner>
       </h4>
     </div>
     <div class="adjacent-parcels full-width">
@@ -246,7 +257,8 @@
       <div class="grid-3 subheading2">File Name</div>
       <ng-container *ngFor="let file of otherFiles">
         <div class="grid-1">
-          {{ file.type?.label }} <app-no-data [showRequired]="showErrors" *ngIf="!file.type"></app-no-data>
+          {{ file.type?.label }}
+          <app-no-data [showRequired]="showErrors" *ngIf="!file.type"></app-no-data>
         </div>
         <div class="grid-2">
           {{ file.description }}
