--- a/portal-frontend/src/app/features/application-details/nfu-details/nfu-details.component.html
+++ b/portal-frontend/src/app/features/application-details/nfu-details/nfu-details.component.html
@@ -1,23 +1,33 @@
 <div *ngIf="applicationSubmission" class="review-table">
-  <div class="subheading2 grid-1">How many hectares are proposed for non-farm use? (hectares)</div>
+  <div class="subheading2 grid-1">
+    How many hectares are proposed for non-farm use? (hectares)
+    <app-updated-banner *ngIf="updatedFields.includes('nfuHectares')"></app-updated-banner>
+  </div>
   <div class="grid-double">
     {{ applicationSubmission.nfuHectares }}
-    <app-no-data [showRequired]="showErrors" *ngIf="!applicationSubmission.nfuHectares"></app-no-data>
   </div>
-  <div class="subheading2 grid-1">What is the purpose of the proposal?</div>
+  <div class="subheading2 grid-1">
+    What is the purpose of the proposal?
+    <app-updated-banner *ngIf="updatedFields.includes('nfuPurpose')"></app-updated-banner>
+  </div>
   <div class="grid-double">
     {{ applicationSubmission.nfuPurpose }}
+
     <app-no-data [showRequired]="showErrors" *ngIf="!applicationSubmission.nfuPurpose"></app-no-data>
   </div>
   <div class="subheading2 grid-1">
     Could this proposal be accommodated on lands outside of the ALR? Please justify why the proposal cannot be carried
     out on lands outside the ALR.
+    <app-updated-banner *ngIf="updatedFields.includes('nfuOutsideLands')"></app-updated-banner>
   </div>
   <div class="grid-double">
     {{ applicationSubmission.nfuOutsideLands }}
     <app-no-data [showRequired]="showErrors" *ngIf="!applicationSubmission.nfuOutsideLands"></app-no-data>
   </div>
-  <div class="subheading2 grid-1">Does the proposal support agriculture in the short or long term? Please explain</div>
+  <div class="subheading2 grid-1">
+    Does the proposal support agriculture in the short or long term? Please explain
+    <app-updated-banner *ngIf="updatedFields.includes('nfuAgricultureSupport')"></app-updated-banner>
+  </div>
   <div class="grid-double">
     {{ applicationSubmission.nfuAgricultureSupport }}
     <app-no-data [showRequired]="showErrors" *ngIf="!applicationSubmission.nfuAgricultureSupport"></app-no-data>
@@ -25,9 +35,12 @@
   <div class="subheading2 grid-1">
     Do you need to import any fill to construct or conduct the proposed Non-farm use? Fill is any material brought onto
     the property, including gravel for construction.
+    <app-updated-banner *ngIf="updatedFields.includes('nfuWillImportFill')"></app-updated-banner>
   </div>
   <div class="grid-double">
-    <span *ngIf="applicationSubmission.nfuWillImportFill !== null">{{ applicationSubmission.nfuWillImportFill ? 'Yes' : 'No' }}</span>
+    <span *ngIf="applicationSubmission.nfuWillImportFill !== null">{{
+      applicationSubmission.nfuWillImportFill ? 'Yes' : 'No'
+    }}</span>
     <app-no-data [showRequired]="showErrors" *ngIf="applicationSubmission.nfuWillImportFill === null"></app-no-data>
   </div>
   <ng-container *ngIf="applicationSubmission.nfuWillImportFill === true">
@@ -37,12 +50,18 @@
     <div class="full-width">
       <h4>Soil and Fill Components</h4>
     </div>
-    <div class="subheading2 grid-1">Describe the type and amount of fill proposed to be placed.</div>
+    <div class="subheading2 grid-1">
+      Describe the type and amount of fill proposed to be placed.
+      <app-updated-banner *ngIf="updatedFields.includes('nfuFillTypeDescription')"></app-updated-banner>
+    </div>
     <div class="grid-double">
       {{ applicationSubmission.nfuFillTypeDescription }}
       <app-no-data [showRequired]="showErrors" *ngIf="!applicationSubmission.nfuFillTypeDescription"></app-no-data>
     </div>
-    <div class="subheading2 grid-1">Briefly describe the origin and quality of fill.</div>
+    <div class="subheading2 grid-1">
+      Briefly describe the origin and quality of fill.
+      <app-updated-banner *ngIf="updatedFields.includes('nfuFillOriginDescription')"></app-updated-banner>
+    </div>
     <div class="grid-double">
       {{ applicationSubmission.nfuFillOriginDescription }}
       <app-no-data [showRequired]="showErrors" *ngIf="!applicationSubmission.nfuFillOriginDescription"></app-no-data>
@@ -50,17 +69,26 @@
     <div class="full-width">
       <span class="subheading1">Project Dimensions</span>
     </div>
-    <div class="subheading2 grid-1">Total fill placement area (ha)</div>
+    <div class="subheading2 grid-1">
+      Total fill placement area (ha)
+      <app-updated-banner *ngIf="updatedFields.includes('nfuTotalFillPlacement')"></app-updated-banner>
+    </div>
     <div class="grid-double">
       {{ applicationSubmission.nfuTotalFillPlacement }}
       <app-no-data [showRequired]="showErrors" *ngIf="!applicationSubmission.nfuTotalFillPlacement"></app-no-data>
     </div>
-    <div class="subheading2 grid-1">Maximum depth of material to be placed as fill (m)</div>
+    <div class="subheading2 grid-1">
+      Maximum depth of material to be placed as fill (m)
+      <app-updated-banner *ngIf="updatedFields.includes('nfuMaxFillDepth')"></app-updated-banner>
+    </div>
     <div class="grid-double">
       {{ applicationSubmission.nfuMaxFillDepth }}
       <app-no-data [showRequired]="showErrors" *ngIf="!applicationSubmission.nfuMaxFillDepth"></app-no-data>
     </div>
-    <div class="subheading2 grid-1">Volume of material to be placed as fill (m3)</div>
+    <div class="subheading2 grid-1">
+      Volume of material to be placed as fill (m3)
+      <app-updated-banner *ngIf="updatedFields.includes('nfuFillVolume')"></app-updated-banner>
+    </div>
     <div class="grid-double">
       {{ applicationSubmission.nfuFillVolume }}
       <app-no-data [showRequired]="showErrors" *ngIf="!applicationSubmission.nfuFillVolume"></app-no-data>
@@ -68,12 +96,16 @@
     <div class="full-width">
       <span class="subheading1">Project Duration</span>
     </div>
-    <div class="subheading2 grid-1">Duration</div>
+    <div class="subheading2 grid-1">
+      Duration <app-updated-banner *ngIf="updatedFields.includes('nfuProjectDurationUnit')"></app-updated-banner>
+    </div>
     <div class="grid-double">
       {{ applicationSubmission.nfuProjectDurationUnit }}
       <app-no-data [showRequired]="showErrors" *ngIf="!applicationSubmission.nfuProjectDurationUnit"></app-no-data>
     </div>
-    <div class="subheading2 grid-1">Length</div>
+    <div class="subheading2 grid-1">
+      Length <app-updated-banner *ngIf="updatedFields.includes('nfuProjectDurationAmount')"></app-updated-banner>
+    </div>
     <div class="grid-double">
       {{ applicationSubmission.nfuProjectDurationAmount }}
       <app-no-data [showRequired]="showErrors" *ngIf="!applicationSubmission.nfuProjectDurationAmount"></app-no-data>
