--- a/portal-frontend/src/app/features/application-details/tur-details/tur-details.component.html
+++ b/portal-frontend/src/app/features/application-details/tur-details/tur-details.component.html
@@ -1,5 +1,8 @@
 <div *ngIf="_applicationSubmission" class="review-table">
-  <div class="subheading2 grid-1">What is the purpose of the proposal?</div>
+  <div class="subheading2 grid-1">
+    What is the purpose of the proposal?
+    <app-updated-banner *ngIf="updatedFields.includes('turPurpose')"></app-updated-banner>
+  </div>
   <div class="grid-double">
     {{ _applicationSubmission.turPurpose }}
     <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.turPurpose"></app-no-data>
@@ -7,6 +10,7 @@
   <div class="subheading2 grid-1">
     Specify any agricultural activities such as livestock operations, greenhouses or horticultural activities in
     proximity to the proposal.
+    <app-updated-banner *ngIf="updatedFields.includes('turAgriculturalActivities')"></app-updated-banner>
   </div>
   <div class="grid-double">
     {{ _applicationSubmission.turAgriculturalActivities }}
@@ -14,19 +18,28 @@
   </div>
   <div class="subheading2 grid-1">
     What steps will you take to reduce potential negative impacts on surrounding agricultural lands?
+    <app-updated-banner *ngIf="updatedFields.includes('turReduceNegativeImpacts')"></app-updated-banner>
   </div>
   <div class="grid-double">
     {{ _applicationSubmission.turReduceNegativeImpacts }}
     <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.turReduceNegativeImpacts"></app-no-data>
   </div>
-  <div class="subheading2 grid-1">Could this proposal be accommodated on lands outside of the ALR?</div>
+  <div class="subheading2 grid-1">
+    Could this proposal be accommodated on lands outside of the ALR?
+    <app-updated-banner *ngIf="updatedFields.includes('turOutsideLands')"></app-updated-banner>
+  </div>
   <div class="grid-double">
     {{ _applicationSubmission.turOutsideLands }}
     <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.turOutsideLands"></app-no-data>
   </div>
-  <div class="subheading2 grid-1">Total area of corridor</div>
+  <div class="subheading2 grid-1">
+    Total area of corridor
+    <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.turTotalCorridorArea"></app-no-data>
+  </div>
   <div class="grid-double">
-    <span *ngIf="_applicationSubmission.turTotalCorridorArea !== null">{{ _applicationSubmission.turTotalCorridorArea }}</span>
+    <span *ngIf="_applicationSubmission.turTotalCorridorArea !== null">{{
+      _applicationSubmission.turTotalCorridorArea
+    }}</span>
     <app-no-data [showRequired]="showErrors" *ngIf="_applicationSubmission.turTotalCorridorArea === null"></app-no-data>
   </div>
   <div class="subheading2 grid-1">Proof of Serving Notice</div>
