--- a/portal-frontend/src/app/features/edit-submission/review-and-submit/review-and-submit.component.html
+++ b/portal-frontend/src/app/features/edit-submission/review-and-submit/review-and-submit.component.html
@@ -26,7 +26,7 @@
         Previous<span class="mobile-hidden"> Step</span>
       </button>
       <button mat-flat-button color="primary" (click)="onSubmitToAlcs()">
-        {{ draftMode ? 'Publish updated version' : 'Submit' }}
+        {{ draftMode ? 'Update Submission' : 'Submit' }}
       </button>
     </div>
   </div>
