--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
@@ -11,6 +11,7 @@
       [routerLink]="createDecision.path ? createDecision.path : './'"
       routerLinkActive="active"
       [routerLinkActiveOptions]="{ exact: false }"
+      [disabled]="isDraftExists"
     >
       + Create Draft Decision
     </button>
