Remove important selector to not impact materials calculations
* Add another class to improve specificity score

--- a/alcs-frontend/src/styles/ngselect.scss
+++ b/alcs-frontend/src/styles/ngselect.scss
@@ -60,8 +60,8 @@
   font-size: 18px;
 }
 
-.ng-dropdown-panel.ng-select-bottom {
-  top: calc(100% - 0.5em) !important;
+.ng-star-inserted.ng-dropdown-panel.ng-select-bottom {
+  top: calc(100% - 0.5em);
 }
 
 .ng-select.ng-select-single .ng-select-container:not(.ng-appearance-outline) .ng-clear-wrapper {
