added v2 fields on db and api

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.html
@@ -134,7 +134,7 @@
 
       <mat-form-field appearance="outline">
         <mat-label>Days to Hide from Public</mat-label>
-        <input matInput formControlName="daysHideFromPublic" required />
+        <input matInput mask="0*" formControlName="daysHideFromPublic" required />
       </mat-form-field>
 
       <mat-form-field appearance="outline" class="date-picker">
