Fixes for View Sections
* Remove action buttons from FNG/ALC tabs
* Remove Download PDF from ALC until its implemented
* Fix warning banners

--- a/portal-frontend/src/app/features/view-submission/lfng-review/lfng-review.component.scss
+++ b/portal-frontend/src/app/features/view-submission/lfng-review/lfng-review.component.scss
@@ -3,7 +3,8 @@
 
 .warning {
   background-color: rgba(colors.$accent-color-light, 0.5);
-  padding: rem(1);
+  padding: rem(16);
+  margin-bottom: rem(24);
 }
 
 .link {
