--- a/portal-frontend/src/app/features/view-submission/alc-review/alc-review.component.html
+++ b/portal-frontend/src/app/features/view-submission/alc-review/alc-review.component.html
@@ -1,18 +1,19 @@
 <div *ngIf="application">
   <div class="header">
     <h3>ALC Review and Decision</h3>
-    <button
-      [routerLink]="'/application/' + application.fileNumber + '/edit'"
-      *ngIf="application.canEdit"
-      mat-flat-button
-      color="primary"
-    >
-      Edit Application
-    </button>
-    <button mat-flat-button color="accent">Download PDF</button>
-    <button *ngIf="application.canReview" (click)="onReview(application.fileNumber)" mat-flat-button color="primary">
-      Review Application
-    </button>
+    <div>
+      <button
+        [routerLink]="'/application/' + application.fileNumber + '/edit'"
+        *ngIf="application.canEdit"
+        mat-flat-button
+        color="primary"
+      >
+        Edit Application
+      </button>
+      <button *ngIf="application.canReview" (click)="onReview(application.fileNumber)" mat-flat-button color="primary">
+        Review Application
+      </button>
+    </div>
   </div>
   <div
     *ngIf="
