fetch decision on edit

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.html
@@ -229,7 +229,7 @@
     </div>
 
     <div class="btn-row">
-      <button mat-stroked-button color="primary" type="button">Cancel</button>
+      <button mat-stroked-button color="primary" type="button" (click)="onCancel()">Cancel</button>
       <button type="submit" mat-flat-button color="primary">Save Decision Draft</button>
     </div>
   </form>
