--- a/portal-frontend/src/app/features/application-details/parcel/parcel.component.html
+++ b/portal-frontend/src/app/features/application-details/parcel/parcel.component.html
@@ -62,10 +62,9 @@
         *ngIf="parcel.validation?.isMapAreaHectaresRequired || false"
       ></app-no-data>
     </div>
-    <!-- TODO: Create ownership type code enum -->
     <div class="subheading2 grid-1">
-      PID {{ parcel.ownershipType?.code === 'CRWN' ? '(optional)' : ''
-      }}<app-updated-banner *ngIf="updatedFields.includes(parcelInd + '.pid')"></app-updated-banner>
+      PID {{ parcel.ownershipType?.code === PARCEL_OWNERSHIP_TYPES.CROWN ? '(optional)' : '' }}
+      <app-updated-banner *ngIf="updatedFields.includes(parcelInd + '.pid')"></app-updated-banner>
     </div>
     <div class="grid-double">
       <span *ngIf="parcel.pid">{{ parcel.pid | mask : '000-000-000' }}</span>
@@ -74,8 +73,7 @@
         Invalid Format
       </app-validation-error>
     </div>
-    <!--  Remove field if fee simple selected  -->
-    <ng-container *ngIf="parcel.ownershipType?.code === 'CRWN'">
+    <ng-container *ngIf="parcel.ownershipType?.code === PARCEL_OWNERSHIP_TYPES.CROWN">
       <div class="subheading2 grid-1">
         PIN (optional)<app-updated-banner *ngIf="updatedFields.includes(parcelInd + '.pin')"></app-updated-banner>
       </div>
@@ -87,8 +85,7 @@
         ></app-no-data>
       </div>
     </ng-container>
-    <ng-container *ngIf="parcel.ownershipType?.code === 'SMPL'">
-      <!-- Remove field if crown selected -->
+    <ng-container *ngIf="parcel.ownershipType?.code === PARCEL_OWNERSHIP_TYPES.FEE_SIMPLE">
       <div class="subheading2 grid-1">
         Purchase Date
         <app-updated-banner *ngIf="updatedFields.includes(parcelInd + '.purchasedDate')"></app-updated-banner>
