Portal layout and content fixes (#567)
* Remove unnecessary fields from fee simple and crown parcels and reorganize form

* Update step 8 to conditionally render fields by parcel ownership

* Differentiate step description from questions and fix other parcel id

* Reset PIN as optional field in crown land parcel and fix step 8 layout

* Update error border styling to use rem function

* Change app type modal radio options to list view and reduce description abstractness

* Add documents description section in each step

* Update toast styling

* Reset parcel data on fee simple and crown toggle

* Init parcel entry confirmation dialog component

* Import to module and add dialog template and test

* Show toggle confirmation dialog when parcel fields have input

* Remove dialog if form is dirty but no toggle button was previously selected

* Refactor and clean up

* Replace parcel ownership values with enum and rename references to match other code

* Match ALCS applicant info to portal page

* Use enum value

* Remove unused parameter

--- a/portal-frontend/src/app/features/application-details/application-details.component.html
+++ b/portal-frontend/src/app/features/application-details/application-details.component.html
@@ -42,7 +42,7 @@
           {{ primaryContact.lastName }}
           <app-no-data [showRequired]="showErrors" *ngIf="!primaryContact.lastName"></app-no-data>
         </div>
-        <div class="subheading2 grid-1">Organization (Optional)</div>
+        <div class="subheading2 grid-1">Organization (optional)</div>
         <div class="grid-double">
           {{ primaryContact.organizationName }}
           <app-no-data *ngIf="!primaryContact.organizationName"></app-no-data>
