--- a/portal-frontend/src/app/features/edit-submission/land-use/land-use.component.html
+++ b/portal-frontend/src/app/features/edit-submission/land-use/land-use.component.html
@@ -1,8 +1,8 @@
 <section>
   <div class="step-description">
     <h2>Land Use</h2>
-    <p>Describe the current land use of parcel(s) under application and adjacent parcels.</p>
-    <p>All fields are required unless stated optional.</p>
+    <p>Current land use of parcel(s) under application and adjacent parcels.</p>
+    <p>*All fields are required unless stated optional.</p>
   </div>
   <app-warning-banner>
     Please consult the
