--- a/portal-frontend/src/app/features/edit-submission/primary-contact/primary-contact.component.html
+++ b/portal-frontend/src/app/features/edit-submission/primary-contact/primary-contact.component.html
@@ -1,7 +1,13 @@
 <div class="step-description">
   <h2>Primary Contact</h2>
   <p>Select from the listed parcel owners or identify a third party agent</p>
-  <p>All fields are required unless stated optional.</p>
+  <p>*All fields are required unless stated optional.</p>
+  <div class="step-documents">
+    <h6>Documents needed for this step:</h6>
+    <ul>
+      <li>Authorization Letter (if applicable)</li>
+    </ul>
+  </div>
 </div>
 <section>
   <div class="contacts">
@@ -60,7 +66,7 @@
           </div>
         </div>
         <div class="full-row">
-          <label for="orgName">Organization Name (Optional)</label>
+          <label for="orgName">Organization Name (optional)</label>
           <mat-form-field appearance="outline">
             <input id="orgName" matInput placeholder="Enter Organization Name" formControlName="organizationName" />
           </mat-form-field>
