--- a/portal-frontend/src/app/features/edit-submission/proposal/tur-proposal/tur-proposal.component.html
+++ b/portal-frontend/src/app/features/edit-submission/proposal/tur-proposal/tur-proposal.component.html
@@ -4,7 +4,14 @@
     Considerations are subject to
     <a> Section 6 of the ALC Act. </a>
   </p>
-  <p>All fields are required unless stated optional.</p>
+  <p>*All fields are required unless stated optional.</p>
+  <div class="step-documents">
+    <h6>Documents needed for this step:</h6>
+    <ul>
+      <li>Proof of Serving Notice</li>
+      <li>Proposal Map / Sketch Plan</li>
+    </ul>
+  </div>
 </div>
 <app-warning-banner>
   In order to complete this step, please consult the following pages on the ALC website:
