--- a/portal-frontend/src/app/features/edit-submission/proposal/soil-table/soil-table.component.scss
+++ b/portal-frontend/src/app/features/edit-submission/proposal/soil-table/soil-table.component.scss
@@ -1,4 +1,4 @@
-@use '../../../../../../styles/functions' as *;
+@use '../../../../../styles/functions' as *;
 
 .container {
   border: 1px solid #000;
